kubernetes/manifest_files/library-events-consumer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: library-events-consumer
  namespace: default
  labels:
    app: library-events-consumer
spec:
  type: NodePort
  selector:
    app: library-events-consumer
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
