kubernetes/manifest_files/library-events-producer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: library-events-producer
  namespace: default
  labels:
    app: library-events-producer
spec:
  type: NodePort
  selector:
    app: library-events-producer
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
