kubernetes/manifest_files/library-events-consumer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: library-events-consumer-ingress
  namespace: default
  labels:
    app: library-events-consumer
spec:
  ingressClassName: nginx
  rules:
    - host: library-consumer.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: library-events-consumer
                port:
                  number: 8081
